--- a/WebContent/pages/pessoaFisica/pessoaFisicaPesquisaOld.xhtml
+++ b/WebContent/pages/pessoaFisica/pessoaFisicaPesquisaOld.xhtml
@@ -9,7 +9,7 @@
 <ui:composition template="/templates/modeloGeral.xhtml">
 	<ui:define name="metadata">
 		<f:metadata>
-			<f:event listener="#{colaboradorBean.listar}" type="preRenderView" />
+			<f:event listener="#{pessoaFisicaBean.listar}" type="preRenderView" />
 		</f:metadata>
 	</ui:define>
 
@@ -22,41 +22,36 @@
 			</p:toolbar>
 
 			<p:dataTable emptyMessage="Nenhum registro encontrado."
-				value="#{colaboradorBean.listaPFisicas}"
-				filteredValue="#{colaboradorBean.listaPFisicasFiltradas}"
+				value="#{pessoaFisicaBean.listaPessoasFisicas}"
+				filteredValue="#{pessoaFisicaBean.listaPessoasFisicasFiltradas}"
 				var="pfisica" rows="10" paginator="true">
 				<f:facet name="footer">
-					<p:button value="Novo" icon="ui-icon-plus"
+					<p:button value="Novo"
 						outcome="/pages/pessoaFisica/pessoaFisicaCadastro.xhtml?faces-redirect=true">
 						<f:param name="pfacao" value="novo" />
 					</p:button>
 				</f:facet>
 				<p:column headerText="Código" filterBy="#{pfisica.id}"
-					sortBy="#{pfisica.id}"
-					filterStyle="max-width: 90%; min-width: 90%;"
-					style="width: 12%; text-align: center;">
+					sortBy="#{pfisica.id}" style="width: 9%;">
 					<h:outputText value="#{pfisica.id}" />
 				</p:column>
 
-				<p:column headerText="Nome" filterBy="#{pessoa.pessoa.nome}"
-					filterStyle="max-width: 90%; min-width: 90%;">
+				<p:column headerText="Nome" filterBy="#{pessoa.pessoa.nome}">
 					<h:outputText value="#{pfisica.pessoa.nome}" />
 				</p:column>
 
 				<p:column headerText="CPF" filterBy="#{pessoa.cpf}"
-					filterStyle="max-width: 90%; min-width: 90%;"
-					style="width: 15%; text-align: center;">
+					style="width: 12%; text-align: center;">
 					<h:outputText value="#{pfisica.cpf}" />
 				</p:column>
 
-				<p:column headerText="Opções"
-					style="width: 25%; text-align: center;">
-					<p:button value="Editar" icon="ui-icon-pencil"
+				<p:column headerText="Opções" style="width: 12%; text-align: center;">
+					<p:button value="Editar"
 						outcome="/pages/pessoaFisica/pessoaFisicaCadastro.xhtml?faces-redirect=true">
 						<f:param name="pfId" value="#{pfisica.id}" />
 						<f:param name="pfacao" value="editar" />
 					</p:button>
-					<p:button value="Excluir" icon="ui-icon-close"
+					<p:button value="Excluir"
 						outcome="/pages/pessoaFisica/pessoaFisicaCadastro.xhtml?faces-redirect=true">
 						<f:param name="pfId" value="#{pfisica.id}" />
 						<f:param name="pfacao" value="excluir" />
