--- a/WebContent/pages/pessoaJuridica/pessoaJuridicaPesquisaOld.xhtml
+++ b/WebContent/pages/pessoaJuridica/pessoaJuridicaPesquisaOld.xhtml
@@ -23,42 +23,37 @@
 
 			<p:dataTable emptyMessage="Nenhum registro encontrado."
 				value="#{pessoaJuridicaBean.listaPessoasJuridicas}"
-				filteredValue="#{pessoaJuridicaBean.listaPessoasJuridicasFiltradas}"
-				var="pjuridica" rows="10" paginator="true">
+				filteredValue="#{pessoaJuridicaBean.listaPessoasJuridicasFiltradas}" var="pjuridica"
+				rows="10" paginator="true">
 				<f:facet name="footer">
-					<p:button value="Novo" icon="ui-icon-plus"
-						outcome="/pages/pessoaJuridica/pessoaJuridicaCadastro.xhtml?faces-redirect=true">
-						<f:param name="pjacao" value="novo" />
+					<p:button value="Novo"
+						outcome="/pages/pessoaJuridica/pessoaJuridicaCadastro.xhtml?faces-redirect=true" >
+						<f:param name="pjacao" value="novo"/>
 					</p:button>
 				</f:facet>
 				<p:column headerText="Código" filterBy="#{pjuridica.id}"
-					filterStyle="max-width: 90%; min-width: 90%;"
 					sortBy="#{pjuridica.id}" style="width: 9%;">
 					<h:outputText value="#{pjuridica.id}" />
 				</p:column>
 
-				<p:column headerText="Nome" filterBy="#{pjuridica.pessoa.nome}"
-					filterStyle="max-width: 90%; min-width: 90%;">					
+				<p:column headerText="Nome" filterBy="#{pjuridica.pessoa.nome}">
 					<h:outputText value="#{pjuridica.pessoa.nome}" />
 				</p:column>
-
-				<p:column headerText="CNPJ" filterBy="#{pjuridica.cnpj}"
-					filterStyle="max-width: 90%; min-width: 90%;"
-					style="width: 18%; text-align: center;">
-					<h:outputText value="#{pjuridica.cnpj}" />
+				
+				<p:column headerText="CNPJ" filterBy="#{pjuridica.cnpj}">
+					<h:outputText value="#{pjuridica.cnpj}"/>
 				</p:column>
 
-				<p:column headerText="Opções"
-					style="width: 25%; text-align: center;">
-					<p:button value="Editar" icon="ui-icon-pencil"
+				<p:column headerText="Opções" style="width: 12%;">
+					<p:button value="Editar"
 						outcome="/pages/pessoaJuridica/pessoaJuridicaCadastro.xhtml?faces-redirect=true">
 						<f:param name="pjId" value="#{pjuridica.id}" />
-						<f:param name="pjacao" value="editar" />
+						<f:param name="pjacao" value="editar"/>
 					</p:button>
-					<p:button value="Excluir" icon="ui-icon-close"
+					<p:button value="Excluir"
 						outcome="/pages/pessoaJuridica/pessoaJuridicaCadastro.xhtml?faces-redirect=true">
 						<f:param name="pjId" value="#{pjuridica.id}" />
-						<f:param name="pjacao" value="excluir" />
+						<f:param name="pjacao" value="excluir"/>
 					</p:button>
 				</p:column>
 
